[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/img/border_no_transparent.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/list-deck/cannon_img.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/icon/remove_from_deck.png" type="Texture" id=4]
[ext_resource path="res://menu/deck-menu/item-deck/item.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_14.tres" type="DynamicFont" id=6]

[node name="item" type="Control"]
margin_right = 210.0
margin_bottom = 250.0
rect_min_size = Vector2( 141, 250 )
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -70.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 2
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 210.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
mouse_filter = 2

[node name="name" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 210.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 6 )
text = "Cannon"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cost" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 210.0
margin_bottom = 57.0
custom_colors/font_color = Color( 1, 0.756863, 0.027451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 3 )
text = "20/45"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 210.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 5 )
mouse_filter = 2

[node name="hide" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.364706, 0.364706, 0.364706, 0.639216 )

[node name="border" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
region_rect = Rect2( -14.1632, -10.0305, 510.48, 356.69 )
patch_margin_left = 34
patch_margin_top = 28
patch_margin_right = 31
patch_margin_bottom = 28
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remove_card" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icn" type="TextureRect" parent="remove_card"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="remove_card" to="." method="_on_remove_card_pressed"]
